get update delete prices
